# mcpglass

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  SECURITY.md
.github/workflows/: bench.yml  ci.yml  conformance.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: bloat.rs  clients.rs  dash.rs  export.rs  gateway.rs  gateway_config.rs  main.rs  prune.rs  replay.rs  security.rs  tap.rs
crates/cli/tests/: bench_e2e.rs  bloat_cli.rs  fail_open_regression.rs  gateway_http.rs  inject.rs  proxy_passthrough.rs  replay.rs  security_gate.rs
crates/dashboard/: Cargo.toml  build.rs
crates/dashboard/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/dashboard/frontend/dev-mock/: server.mjs
crates/dashboard/frontend/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css
crates/dashboard/frontend/src/components/: ConfirmDialog.tsx  ContextView.tsx  DetailPanel.tsx  InjectView.tsx  MessageTable.tsx  Pagination.tsx  PruneDialog.tsx  SecurityView.tsx  Sidebar.tsx  Skeleton.tsx  StatsBar.tsx  Toast.tsx  Toolbar.tsx
crates/dashboard/frontend/src/hooks/: useApi.ts  useHashRoute.ts  useTheme.ts
crates/dashboard/frontend/src/styles/: base.css  components.css  layout.css  tokens.css  views.css
crates/dashboard/src/: export.rs  lib.rs
crates/dashboard/tests/: dashboard_api.rs
crates/policy/: Cargo.toml
crates/policy/benches/: policy_bench.rs
crates/policy/src/: inject.rs  lib.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/benches/: parse_line.rs
crates/proxy-core/src/: bloat.rs  lib.rs  sse.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: RELEASING.md  benchmarks.md  cli.md  compat.md  configuration.md  demo.md  security-model.md
docs/launch/: reddit-r-mcp.md  show-hn.md
scripts/: assert-protocol-version.mjs  conformance-diff.mjs  demo.ps1  demo.sh
scripts/demo-assets/: inject.toml  mcp-client.js
scripts/record-gif/: cdp-capture.mjs  encode-gif.ps1  patch-gif.mjs
