[workspace]
resolver = "2"
members = ["crates/proxy-core", "crates/policy", "crates/storage", "crates/cli", "crates/dashboard"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

# Shared dependency versions, resolved once for the whole workspace.
[workspace.dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "process", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6"
