[workspace]
resolver = "2"
members = ["crates/proxy-core", "crates/policy", "crates/storage", "crates/cli", "crates/dashboard"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"
repository = "https://github.com/q86865511/mcpglass"
homepage = "https://github.com/q86865511/mcpglass"
authors = ["q86865511"]
keywords = ["mcp", "proxy", "observability", "security", "debugging"]
categories = ["development-tools::debugging", "command-line-utilities"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Shared dependency versions, resolved once for the whole workspace.
[workspace.dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "process", "sync", "macros"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6"
# Micro-benchmark harness (dev-only). Trimmed to `cargo_bench_support` so we pull
# neither plotters/gnuplot nor rayon — the benches report plain-text estimates.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
