[package]
name = "cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcpglass"
path = "src/main.rs"

# Test fixture: a minimal newline-echo "MCP server" used by the integration
# tests. Built as a bin so tests can reach it via CARGO_BIN_EXE_echo-mcp.
[[bin]]
name = "echo-mcp"
path = "src/bin/echo_mcp.rs"

[dependencies]
proxy-core = { path = "../proxy-core" }
storage = { path = "../storage" }
dashboard = { path = "../dashboard" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
directories.workspace = true
# preserve_order keeps client-config key order stable across attach/detach.
serde_json = { workspace = true, features = ["preserve_order"] }
opener = "0.7"

[dev-dependencies]
rusqlite.workspace = true
