[package]
name = "cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcpglass"
path = "src/main.rs"

# Test fixture: a minimal newline-echo "MCP server" used by the integration
# tests. Built as a bin so tests can reach it via CARGO_BIN_EXE_echo-mcp.
[[bin]]
name = "echo-mcp"
path = "src/bin/echo_mcp.rs"

[dependencies]
proxy-core = { path = "../proxy-core" }
policy = { path = "../policy" }
storage = { path = "../storage" }
dashboard = { path = "../dashboard" }
# `net` is needed by the gateway's TcpListener / axum::serve, on top of the
# workspace defaults (rt/io/process/sync/macros).
tokio = { workspace = true, features = ["net"] }
clap.workspace = true
anyhow.workspace = true
directories.workspace = true
# preserve_order keeps client-config key order stable across attach/detach.
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
opener = "0.7"
# HTTP gateway: axum server + reqwest upstream client (rustls, streaming bodies).
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio-stream = "0.1"

[dev-dependencies]
rusqlite.workspace = true
# gateway_http integration test: fake upstream (axum) + client (reqwest).
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
