[package]
name = "dashboard"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
storage = { path = "../storage" }
proxy-core = { path = "../proxy-core" }
axum = "0.8"
tokio = { workspace = true, features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
rust-embed = "8"
mime_guess = "2"
anyhow.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite.workspace = true
