[package]
name = "policy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure decision logic for mcpglass request/response policy, fingerprinting, secret detection, and injection rules."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
regex = "1"
sha2 = "0.10"
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
# The benches build request/tool JSON with `serde_json::json!`; a normal dependency
# is not in scope for a separate bench crate, so it is re-declared here.
serde_json.workspace = true

# Micro-benchmarks for the c2s decision and tool-fingerprint hot paths (docs/benchmarks.md).
[[bench]]
name = "policy_bench"
harness = false
