[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite-backed session and event storage for the mcpglass MCP proxy."

[dependencies]
proxy-core = { path = "../proxy-core" }
rusqlite.workspace = true
anyhow.workspace = true
